--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,24 @@
 @import 'layout/404/index.scss';
 @import 'layout/PermissionDenied/index.scss';
 
-.demo222 {
-  .ant-menu-item-only-child {
-    width: 100% !important;
-  }
+:root {
+  color: white;
+}
+
+.font-forum {
+  font-family: 'forum', serif;
+}
+
+.ReactCollapse--collapse {
+  transition: height 500ms;
+}
+
+.swiper-button-next {
+  color: white !important;
+  transform: translate(40%, -100%) !important;
+}
+
+.swiper-button-prev {
+  color: white !important;
+  transform: translate(-40%, -100%) !important;
 }
